fix "menu items were not showing in hamburger menu when I change the div to nav" Fixes #12

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ nav {
   font-size: 1.5rem;
 }
 .my-info :is(span, icon) {
-   margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 .my-info icon {
   border: 1px solid blue;
@@ -98,7 +98,7 @@ nav {
   background-color: rgb(128, 40, 128);
   padding: 0.5rem;
   margin-block: 0;
-  color:white;
+  color: white;
 }
 nav ul {
   display: flex;
@@ -108,7 +108,6 @@ nav ul li {
   color: white;
   font-size: 1.5rem;
   margin-inline: 1.85rem;
-
   list-style: none;
 }
 @media (min-width: 769px) and (max-width: 937px) {
@@ -131,7 +130,6 @@ nav ul li a:focus {
   /* transform-origin: top left;
   transform: scale(1.2); */
 }
-
 
 .fixed-header nav {
   position: fixed;
@@ -307,7 +305,7 @@ main {
 }
 
 @media (max-width: 768px) {
-  nav ul li {
+  .fixed-header nav ul li {
     display: none;
   }
 
@@ -316,8 +314,9 @@ main {
     right: 0;
   }
 
-
   #hamburger-menu {
+    display: flex;
+    align-items: flex-start;
     position: fixed;
     top: 12.5rem;
     right: 0;
@@ -325,10 +324,6 @@ main {
     list-style-type: none;
     height: 100%;
     background-color: blueviolet;
- 
-    /* padding: 0 1rem; */
-
-
   }
 
   #hamburger-menu a.active {
@@ -381,21 +376,21 @@ main {
   }
 
   header:has(input[type='checkbox']:checked) + #hamburger-menu {
-    display: flex;
-    justify-content: flex-end;
     animation: openMenu 0.5s ease-in-out forwards;
   }
 
-  header:not(:has(input[type='checkbox']:checked)) + #hamburger-menu {
+  header:not(:has(input[type='checkbox']:checked)) + #hamburger-menu {     
     animation: closeMenu 0.5s ease-in-out forwards;
   }
-
+  nav#hamburger-menu ul {
+    display: flex;
+    flex-direction: column;
+  }
   #hamburger-menu li {
     font-size: 1.5rem;
     list-style-type: none;
     background-color: blueviolet;
     margin: 2rem 0rem;
-   
   }
 
   #hamburger-menu li:active,
